--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-.idea/project01.iml
+*/.idea/workspace.xml
+*/.idea/tasks.xml
+*/.idea/dictionaries
+*/.idea/vcs.xml
+*/.idea/jsLibraryMappings.xml
+*/.idea/project01.iml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
