--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,5 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-**/.idea/misc.xml
-**/.idea/modules.xml
-**/.idea/project01.iml
-**/.idea/vcs.xml
-**/.idea/workspace.xml
+.idea/
 
